--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,7 +1,15 @@
 {
     "version": 2,
-    "builds": [{"src": "./index.js", "use": "@vercel/node"}]
-    
+    "builds": [{"src": "./index.js", "use": "@vercel/node"}],
+    "routes": [
+        {"src": "/api/upload", "dest": "./index.js"},
+        {"src": "/api/auth/(.*)", "dest": "./index.js"},
+        {"src": "/api/users/(.*)", "dest": "./index.js"},
+        {"src": "/api/posts/(.*)", "dest": "./index.js"},
+        {"src": "/api/categories/(.*)", "dest": "./index.js"},
+        {"src": "/images/(.*)", "dest": "./index.js"},
+        
+    ]
 }
 
 
