--- a/api/vercel.json
+++ b/api/vercel.json
@@ -7,7 +7,7 @@
         {"src": "/api/users/(.*)", "dest": "./index.js"},
         {"src": "/api/posts/(.*)", "dest": "./index.js"},
         {"src": "/api/categories/(.*)", "dest": "./index.js"},
-        {"src": "/images/(.*)", "dest": "./index.js"},
+        {"src": "/images/(.*)", "dest": "./index.js"}
         
     ]
 }
