--- a/api/vercel.json
+++ b/api/vercel.json
@@ -2,12 +2,12 @@
     "version": 2,
     "builds": [{"src": "./index.js", "use": "@vercel/node"}],
     "routes": [
-        {"src": "/api/upload", "dest": "./index.js"},
         {"src": "/api/auth/(.*)", "dest": "./index.js"},
         {"src": "/api/users/(.*)", "dest": "./index.js"},
         {"src": "/api/posts/(.*)", "dest": "./index.js"},
-        {"src": "/api/categories/(.*)", "dest": "./index.js"},
-        {"src": "/images/(.*)", "dest": "./index.js"}
+        {"src": "/api/upload", "dest": "./index.js"},
+        {"src": "/images/(.*)", "dest": "./index.js"},
+        {"src": "/api/categories/(.*)", "dest": "./index.js"}
         
     ]
 }
